# LAME

./: README.md
lameproject/app/: CMakeLists.txt  build.gradle
lameproject/app/src/androidTest/java/com/example/huozhenpeng/lametest/: ExampleInstrumentedTest.java
lameproject/app/src/main/: AndroidManifest.xml
lameproject/app/src/main/cpp/: lamemp3encoder.cpp  lamemp3encoder.h  native-lib.cpp
lameproject/app/src/main/java/com/example/huozhenpeng/lametest/: MainActivity.java
lameproject/app/src/main/res/layout/: activity_main.xml
lameproject/app/src/main/res/values/: strings.xml
lameproject/app/src/test/java/com/example/huozhenpeng/lametest/: ExampleUnitTest.java
lameproject/gradle/wrapper/: gradle-wrapper.properties
